--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
+  heading: "Hello, I'm Caleb"
   subheading: "your awesome subheading"
   banner: "your awesome url"
