--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "Hello, I'm Caleb"
-  subheading: "your awesome subheading"
+  subheading: "I'm based in Nigeria for now, and currently studying to become a Cloud Solution architect, That's all I can say for now"
   banner: "your awesome url"
