--- a/_data/translate_langs.yml
+++ b/_data/translate_langs.yml
@@ -21,9 +21,9 @@
   img: https://cdn.countryflags.com/thumbs/south-korea/flag-400.png
   text: Korean
 
-- lang: ru
-  img: https://cdn.countryflags.com/thumbs/russia/flag-400.png
-  text: Russian
+- lang: es
+  img: https://www.countryflags.com/wp-content/uploads/spain-flag-png-large.png
+  text: Spanish
 
 - lang: de
   img: https://cdn.countryflags.com/thumbs/germany/flag-400.png
