--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,7 @@
 title: Caleb's Personal Page
 email: Kalebiotezz@yahoo.com
 author: Calebio
-copyright: "Unpublished Work (cleft) {currentYear} {author}"
-description: >- # this means to ignore newlines until "baseurl:"
-I am currently learning Web Development(Backend) and Cloud Technologies, not bound by a single technology but more focused on solving problems using the best available tool or technology.
+
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -43,12 +41,12 @@ I am currently learning Web Development(Backend) and Cloud Technologies, not bou
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+copyright: "Unpublished Work (cleft) {currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am currently learning Web Development(Backend) and Cloud Technologies, 
+  not bound by a single technology but more focused on solving problems using 
+  the best available tool or technology.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
