--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "Hello, I'm Caleb"
-  subheading: "I'm based in Nigeria for now, and currently studying to become a Cloud Solution architect, That's all I can say for now"
+  subheading: " I'm a C# .Net(Backend) Developer and a Junior AWS Solution Architect "
   banner: "your awesome url"
