--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,5 @@
 home:
   heading: "Hello, I'm Caleb"
   subheading: " I'm a C# .Net(Backend) Developer and a Junior AWS Solution Architect "
+  subheading: " Feel free to check the about page "
   banner: "your awesome url"
