--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,5 +1,4 @@
 home:
   heading: "Hello, I'm Caleb"
-  subheading: " I'm a C# .Net(Backend) Developer and a Junior AWS Solution Architect "
-  subheading: " Feel free to check the about page "
+  subheading: " I'm a C# .Net(Backend) Developer and a Junior AWS Solution Architect and Feel free to check the about page "
   banner: "your awesome url"
