--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,5 @@
 home:
   heading: "Hello, I'm Caleb"
-  subheading: " I'm a Cloud Solution Architect and a developer, please feel free to check the about page."
+  subheading: " I'm a Cloud Engineer|Cloud Support Engineer and Backend Developer"
+  subheading: "Please feel free to check the about page!"
   banner: "your awesome url"
