--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "Hello, I'm Caleb"
-  subheading: " I'm a Cloud Engineer|Cloud Support Engineer and Backend Developer. Please feel to check the about page."
+  subheading: " I'm a Cloud Engineer|Cloud Support Engineer and a .Net Developer. Please feel to check the about page."
   banner: "your awesome url"
